[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "isp-truth-tester"
version = "1.0.0"
description = "Monitor internet speed and latency over time on a Raspberry Pi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "speedtest-cli>=2.1.3",
]

[project.scripts]
isp-truth-tester = "isp_truth_tester.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["isp_truth_tester*"]
